# challenge

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
src/: __main__.py  intervals.py
tests/: test_intervals.py
