[tool.poetry]
name = "challenge"
version = "0.1.0"
description = "Coding Challenge"
authors = ["Jens Pfeifle <jens@pfeifle.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pylint = "^2.12.2"
pytest = "^7.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py310']

[tool.mypy]
python_version= "3.10"
strict = true
